/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The SecretMananger proto contains the artificts for Secrets administration
 * such as creation and deployment.
 */
syntax = "proto3";

package fonoster.secrets.v1beta1;

option go_package = "github.com/fonoster/fonoster/mods/secrets/fonoster/services/protos/secrets";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "common.proto";

service Secrets {
  // Lists Secret 
  rpc ListSecretsId (ListSecretsIdRequest) returns (ListSecretsIdResponse) {
    option (google.api.http) = { get: "/v1beta1/secrets" };
  };
  rpc CreateSecret (CreateSecretRequest) returns (Secret) {
    option (google.api.http) = { 
      post: "/v1beta1/secrets"
      body: "*"
    };
  };  
  // Gets Secret with the Secret-name
  rpc GetSecret (GetSecretRequest) returns (Secret) {
    option (google.api.http) = { get: "/v1beta1/secrets/{name}" };
  };
  // Peforms a hard delete of the Secret resource
  rpc DeleteSecret (DeleteSecretRequest) returns (fonoster.common.v1beta1.Empty) {
    option (google.api.http) = { 
      delete: "/v1beta1/secrets/{name}"
    };
  };
}

message ListSecretsIdRequest {
  // The maximum number of items in the list
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any
  string page_token = 2;

  // Level of detail of the individual entities (reserved)
  fonoster.common.v1beta1.View view = 3;
}

message ListSecretsIdResponse {
  // List of Secrets
  repeated string secrets = 1;
  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}

message GetSecretRequest {
  string name = 1;
  fonoster.common.v1beta1.View view = 2;
}

message CreateSecretRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\": \"mydbsecret\", \"secret\": \"s3cr3t\"}"
  };
  string name = 1;
  string secret = 2;
}

message DeleteSecretRequest {
  string name = 1;
}

message Secret {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\": \"mydbsecret\", \"secret\": \"s3cr3t\"}"
  };
  string name = 1;
  string secret = 2;
}
